# nxcommon

./: README.md
src/: CMakeLists.txt  Utilities.cmake
src/cmakemodules/: CMakeLists.txt  FindLibMySQLClient.cmake  FindLibPQ.cmake  GetGitRevisionDescription.cmake  NxBuildCompiler.cmake  NxLuaDefinitionsParser.cmake  NxResourceCompiler.cmake  NxScriptUtilities.cmake  NxUtilities.cmake  luadefparser.c  luadefparser.cpp  rc.c  rc.cpp
src/libnxcommon/: CMakeLists.txt  NxcommonConfig.cmake.in
src/libnxcommon/nxcommon/: AbstractSharedBuffer.h  AbstractSharedString.h  ByteArray.h  CLIParser.cpp  CLIParser.h  CMakeLists.txt  CRC32.cpp  CRC32.h  CString.cpp  CString.h  Cache.h  Color4.cpp  Color4.h  ErrorLog.cpp  ErrorLog.h  Observable.h  Observer.h  ProgressObserver.h  ResourceCache.h  RingBuffer.h  UString.cpp  UString.h  c11atomic.h  config.cmake.h  cxx11hash.h  debug.cpp  debug.h  encoding.cpp  encoding.h  exception.h  image.h  iterator.h  json.cpp  json.h  log.c  log.cpp  log.h  log.lua  logcpp.cpp  logcpp.h  (+12 more)
src/libnxcommon/nxcommon/config/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigFileDelegate.h
src/libnxcommon/nxcommon/exception/: CMakeLists.txt  Exception.cpp  Exception.h  InvalidFormatException.h  InvalidStateException.h  InvalidValueException.h  OutOfBoundsException.cpp  OutOfBoundsException.h
src/libnxcommon/nxcommon/file/: ArchiveChildIterator.h  ArchiveHandler.cpp  ArchiveHandler.h  ArchiveHandlerSharedFileData.h  CMakeLists.txt  DefaultFileFinder.cpp  DefaultFileFinder.h  File.cpp  File.h  FileChildList.cpp  FileChildList.h  FileException.h  FileFinder.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  NullFileFinder.h  _File.h
src/libnxcommon/nxcommon/gl/: CMakeLists.txt  Camera.cpp  Camera.h  Camera_lua.cpp  Camera_lua.h  GLException.cpp  GLException.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  camera.lua  gl.cpp  gl.h
src/libnxcommon/nxcommon/math/: CMakeLists.txt  Frustum.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  intersection.cpp  intersection.h  mathdefines.h  mathutil.cpp  mathutil.h  mathutil.lua  project.cpp  project.h
src/libnxcommon/nxcommon/script/: CMakeLists.txt  ScriptException.h  ScriptObject.h  _luasys_helpers.h  luasys.cpp  luasys.h  luasysdefs.h  scriptsys.lua
src/libnxcommon/nxcommon/script/math/: CMakeLists.txt  ScriptMatrix4.cpp  ScriptMatrix4.h  ScriptVector3.h  ScriptVector4.cpp  matrix.lua  vector.lua
src/libnxcommon/nxcommon/script/oldmath/: CMakeLists.txt  ScriptMatrix4.cpp  ScriptMatrix4.h  ScriptVector3.cpp  ScriptVector4.cpp  ScriptVector4.h  luamath.cpp  luamath.h
src/libnxcommon/nxcommon/script/sql/: CMakeLists.txt  ScriptSQLDatabase.cpp  ScriptSQLDatabase.h  ScriptSQLPreparedStatement.cpp  ScriptSQLPreparedStatement.h  ScriptSQLResult.cpp  ScriptSQLResult.h  luasql.h
src/libnxcommon/nxcommon/sql/: CMakeLists.txt  MySQLDriver.cpp  MySQLDriver.h  PSQLDriver.h  SQLDatabase.cpp  SQLDatabase.h  SQLException.h  SQLPreparedStatement.cpp  SQLPreparedStatement.h  SQLResult.cpp  SQLResult.h  SQLiteDriver.h  TimeoutException.h  sql.h
src/libnxcommon/nxcommon/sql/driver/: CMakeLists.txt  MySQLDatabaseImpl.cpp  MySQLDatabaseImpl.h  MySQLPreparedStatementImpl.cpp  MySQLPreparedStatementImpl.h  MySQLPreparedStatementResultImpl.cpp  MySQLPreparedStatementResultImpl.h  MySQLPreparedStatementResultInstanceImpl.cpp  MySQLPreparedStatementResultInstanceImpl.h  MySQLResultImpl.cpp  MySQLResultImpl.h  PSQLDatabaseImpl.cpp  PSQLDatabaseImpl.h  PSQLPreparedStatementImpl.cpp  PSQLPreparedStatementImpl.h  PSQLResultImpl.cpp  PSQLResultImpl.h  SQLDatabaseImpl.cpp  SQLDatabaseImpl.h  SQLPreparedStatementImpl.h  SQLResultImpl.h  SQLiteDatabaseImpl.cpp  SQLiteDatabaseImpl.h  SQLitePreparedStatementImpl.cpp  SQLitePreparedStatementImpl.h  SQLiteResultImpl.cpp  SQLiteResultImpl.h  mysqlutils.h  psqlutils.cpp  psqlutils.h  sqlbase.h  sqliteutils.cpp  sqliteutils.h  sqlutils.h
src/libnxcommon/nxcommon/stream/: CMakeLists.txt  EndianSwappingStreamReader.h  EndianSwappingStreamWriter.h  IOException.cpp  IOException.h  RangedStream.h  RangedStreambuf.h  Reader.cpp  Reader.h  StreamReader.h  StreamWriter.h  streamutil.cpp  streamutil.h
src/libnxcommon/nxcommon/thread/: CMakeLists.txt  MainThread.cpp  Mutex.cpp  Mutex.h  Thread.h
src/nxcommon-test/: CMakeLists.txt
src/nxcommon-test/src/: CMakeLists.txt  bytearray.cpp  config.cmake.h  file.cpp  filepath.cpp  global.cpp  global.h  main.cpp  printhelpers.cpp  printhelpers.h  sql.cpp  string.cpp  util.cpp
src/nxcommon-test/testdir/filetest/: .gitattributes  file1  newlinetest
trunk/src/libnxcommon/: CMakeLists.txt  NxcommonConfig.cmake.in
trunk/src/libnxcommon/nxcommon/: AbstractSharedBuffer.h  ByteArray.cpp  ByteArray.h  CLIParser.cpp  CMakeLists.txt  CString.h  Cache.h  ProgressObserver.h  StringComparator.h  UString.cpp  config.cmake.h  encoding.h  image.cpp  image.h  strutil.cpp  unicodeutil.cpp  unicodeutil.h  util.cpp  util.h
trunk/src/libnxcommon/nxcommon/exception/: CMakeLists.txt  Exception.cpp  Exception.h
trunk/src/libnxcommon/nxcommon/file/: ArchiveHandler.h  ArchiveHandlerSharedFileData.h  CMakeLists.txt  DefaultFileFinder.cpp  DefaultFileFinder.h  File.cpp  FileChildList.cpp  FileException.h  FileFinder.h  FilePath.cpp  FilePath.h  FileSystem.h
trunk/src/libnxcommon/nxcommon/math/: Frustum.cpp  Frustum.h  Matrix3.cpp  Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h  intersection.cpp  intersection.h  project.cpp  project.h
trunk/src/libnxcommon/nxcommon/script/: CMakeLists.txt  ScriptException.h  ScriptObject.cpp  luasys.cpp
trunk/src/libnxcommon/nxcommon/sql/: CMakeLists.txt  MySQLDriver.cpp  MySQLDriver.h  PSQLDriver.cpp  PSQLDriver.h  SQLDatabase.cpp  SQLPreparedStatement.cpp  SQLPreparedStatement.h  SQLResult.h  SQLiteDriver.cpp  (+1 more)
trunk/src/nxcommon-test/: CMakeLists.txt
trunk/src/nxcommon-test/src/: CMakeLists.txt  bytearray.cpp  global.h  main.cpp  printhelpers.cpp  printhelpers.h  sql.cpp  string.cpp
(+55 files in other folders)
